--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 5180",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:server\"",
+    "dev:frontend": "vite --port 5180",
     "dev:server": "npm --prefix server run dev",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "db:migrate": "npm --prefix server run prisma:migrate",
+    "db:generate": "npm --prefix server run prisma:generate",
+    "db:seed": "npm --prefix server run db:seed"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
     "vue": "^3.5.11"
   },
   "devDependencies": {
@@ -19,6 +24,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "autoprefixer": "^10.4.17",
+    "concurrently": "^9.0.1",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.13",
