--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
@@ -31,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/jsonwebtoken": "^9.0.5",
     "eslint": "^8.57.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.15.5",
