--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
-    "vue": "^3.5.11"
+    "chart.js": "^4.5.1",
+    "vue": "^3.5.11",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
