fix: Seed-Script idempotent gemacht und seed npm script hinzugefügt
- Seed-Script prüft jetzt, ob Daten bereits existieren
- Kann jetzt sicher mehrmals ausgeführt werden
- seed npm script hinzugefügt (verweist auf db:seed)

--- a/v2/backend/package.json
+++ b/v2/backend/package.json
@@ -21,6 +21,7 @@
     "db:migrate:dry": "prisma migrate dev --create-only",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
+    "seed": "npm run db:seed",
     "dep:scan": "npm audit --audit-level=moderate"
   },
   "dependencies": {
